Update install.n.setup.scouter.md